Updates to resume

--- a/myResume.html
+++ b/myResume.html
@@ -216,7 +216,7 @@ h4 span:first-child {
 			<div class="row">
 			<div class="col-sm-6">
 				<strong>Email</strong>
-				<div class="email"><a class="__cf_email__" href="/cdn-cgi/l/email-protection" data-cfemail="5e3a3f28373a7039373838312c3a70342c1e39333f3732703d3133">[email&#160;protected]</a><script cf-hash='f9e31' type="text/javascript">
+				<div class="email"><a class="__cf_email__" href="/cdn-cgi/l/email-protection" data-cfemail="791d180f101d571e101f1f160b1d57130b391e14181015571a1614">[email&#160;protected]</a><script cf-hash='f9e31' type="text/javascript">
 /* <![CDATA[ */!function(){try{var t="currentScript"in document?document.currentScript:function(){for(var t=document.getElementsByTagName("script"),e=t.length;e--;)if(t[e].getAttribute("cf-hash"))return t[e]}();if(t&&t.previousSibling){var e,r,n,i,c=t.previousSibling,a=c.getAttribute("data-cfemail");if(a){for(e="",r=parseInt(a.substr(0,2),16),n=2;a.length-n;n+=2)i=parseInt(a.substr(n,2),16)^r,e+=String.fromCharCode(i);e=document.createTextNode(e),c.parentNode.replaceChild(e,c)}}}catch(u){}}();/* ]]> */</script></div>
 			</div>
 			<div class="col-sm-6">
@@ -237,7 +237,7 @@ h4 span:first-child {
 			<h3>About</h3>
 		</aside>
 		<div class="col-sm-9">
-			<p>Richard hails from Tulsa. He has earned degrees from the University of Oklahoma and Stanford. (Go Sooners and Cardinals!) Before starting Pied Piper, he worked for Hooli as a part time software developer. While his work focuses on applied information theory, mostly optimizing lossless compression schema of both the length-limited and adaptive variants, his non-work interests range widely, everything from quantum computing to chaos theory. He could tell you about it, but THAT would NOT be a “length-limited” conversation!</p>
+			<p>Software engineer with a passion for leaning new ways to make products better.</p>
 		</div>
 	</section>
 	<section id="profiles" class="row">
@@ -251,7 +251,9 @@ h4 span:first-child {
 						Twitter
 					</strong>
 					<div class="username">
-							neutralthoughts
+						<div class="url">
+							<a href="https://twitter.com/DavidGiffordJr">DavidGiffordJr</a>
+						</div>
 					</div>
 				</div>
 				<div class="col-sm-6">
