--- a/public/myResume.html
+++ b/public/myResume.html
@@ -216,17 +216,17 @@ h4 span:first-child {
 			<div class="row">
 			<div class="col-sm-6">
 				<strong>Email</strong>
-				<div class="email"><a class="__cf_email__" href="/cdn-cgi/l/email-protection" data-cfemail="553134233c317b323c33333a27317b3f27153238343c397b363a38">[email&#160;protected]</a><script cf-hash='f9e31' type="text/javascript">
+				<div class="email"><a class="__cf_email__" href="/cdn-cgi/l/email-protection" data-cfemail="5c383d2a3538723b353a3a332e3872362e1c3b313d3530723f3331">[email&#160;protected]</a><script cf-hash='f9e31' type="text/javascript">
 /* <![CDATA[ */!function(){try{var t="currentScript"in document?document.currentScript:function(){for(var t=document.getElementsByTagName("script"),e=t.length;e--;)if(t[e].getAttribute("cf-hash"))return t[e]}();if(t&&t.previousSibling){var e,r,n,i,c=t.previousSibling,a=c.getAttribute("data-cfemail");if(a){for(e="",r=parseInt(a.substr(0,2),16),n=2;a.length-n;n+=2)i=parseInt(a.substr(n,2),16)^r,e+=String.fromCharCode(i);e=document.createTextNode(e),c.parentNode.replaceChild(e,c)}}}catch(u){}}();/* ]]> */</script></div>
 			</div>
 			<div class="col-sm-6">
 				<strong>Phone</strong>
-				<div class="phone">(912) 555-4321</div>
+				<div class="phone">(330) 766-0833</div>
 			</div>
 			<div class="col-sm-6">
 				<strong>Website</strong>
 				<div class="website">
-					<a href="http://richardhendricks.com">http://richardhendricks.com</a>
+					<a href="http://developmentchaos.com">http://developmentchaos.com</a>
 				</div>
 			</div>
 			</div>
@@ -258,11 +258,11 @@ h4 span:first-child {
 				</div>
 				<div class="col-sm-6">
 					<strong class="network">
-						SoundCloud
+						GitHub
 					</strong>
 					<div class="username">
 						<div class="url">
-							<a href="https://soundcloud.com/dandymusicnl">dandymusicnl</a>
+							<a href="https://github.com/DavidGiffordJr">DavidGiffordJr</a>
 						</div>
 					</div>
 				</div>
@@ -278,61 +278,122 @@ h4 span:first-child {
 			<div class="row">
 			<div class="col-sm-12">
 				<h4 class="strike-through">
-					<span>Pied Piper</span>
+					<span>Donald P. Pipino Company, LTD</span>
 					<span class="date">
-						2013-12-01 — 2014-12-01
+						2015-02-09 — 
 					</span>
 				</h4>
 				<div class="website pull-right">
-					<a href="http://piedpiper.com">http://piedpiper.com</a>
+					<a href="http://dpipino.com">http://dpipino.com</a>
 				</div>
 				<div class="position">
-					CEO/President
+					Software Engineer
 				</div>
 				<div class="summary">
-					<p>Pied Piper is a multi-platform technology based on a proprietary universal compression algorithm that has consistently fielded high Weisman Scores™ that are not merely competitive, but approach the theoretical limit of lossless compression.</p>
+					<p>Design, develop, and maintain a full range of software applications from ASP.NET and PHP web apps to legacy Windows applications</p>
 				</div>
 				<h4>Highlights</h4>
 				<ul class="highlights">
-					<li class="bullet">Build an algorithm for artist to detect if their music was violating copy right infringement laws</li>
-					<li class="bullet">Successfully won Techcrunch Disrupt</li>
-					<li class="bullet">Optimized an algorithm that holds the current world record for Weisman Scores</li>
+					<li class="bullet">Work with development team to update developer process to streamline the department&#x27;s project flow</li>
+				</ul>
+			</div>
+			<div class="col-sm-12">
+				<h4 class="strike-through">
+					<span>Empyra.com Inc.</span>
+					<span class="date">
+						2015-02-09 — 2013-03-11
+					</span>
+				</h4>
+				<div class="website pull-right">
+					<a href="http://empyra.com">http://empyra.com</a>
+				</div>
+				<div class="position">
+					Senior Software Developer / Team Lead
+				</div>
+				<div class="summary">
+					<p>Design, develop, and maintain a full range of software applications from ASP.NET and PHP web apps to legacy Windows applications</p>
+				</div>
+				<h4>Highlights</h4>
+				<ul class="highlights">
+					<li class="bullet">Work as a team to build and design new functionality of the OneFlow product</li>
+					<li class="bullet">Bring new development technologies to the OneFlow product (e.g. MVC design pattern and WebAPI as a business layer to better structure code base)</li>
+					<li class="bullet">Lead team in .NET technologies and mentor junior developers</li>
+				</ul>
+			</div>
+			<div class="col-sm-12">
+				<h4 class="strike-through">
+					<span>Infocision Management Corporation</span>
+					<span class="date">
+						2012-10-01 — 2013-03-11
+					</span>
+				</h4>
+				<div class="website pull-right">
+					<a href="http://www.infocision.com/">http://www.infocision.com/</a>
+				</div>
+				<div class="position">
+					Senior Application Developer
+				</div>
+				<div class="summary">
+					<p>Design, develop, and maintain a full range of software applications from ASP.NET and PHP web apps to legacy Windows applications</p>
+				</div>
+				<h4>Highlights</h4>
+				<ul class="highlights">
+					<li class="bullet">Work within a team to design cost effective solutions to problems</li>
+					<li class="bullet">Act as point of contact for systems and technologies of familiarity to peers</li>
+					<li class="bullet">Designed and developed multiple applications to meet the changing needs of the company using C#, jQuery and ASP.NET</li>
+				</ul>
+			</div>
+			<div class="col-sm-12">
+				<h4 class="strike-through">
+					<span>Infocision Management Corporation</span>
+					<span class="date">
+						2012-10-01 — 2009-10-01
+					</span>
+				</h4>
+				<div class="website pull-right">
+					<a href="http://www.infocision.com/">http://www.infocision.com/</a>
+				</div>
+				<div class="position">
+					Lead Application Developer
+				</div>
+				<div class="summary">
+					<p>Design, develop, and maintain a full range of software applications from ASP.NET and PHP web apps to legacy Windows applications</p>
+				</div>
+				<h4>Highlights</h4>
+				<ul class="highlights">
+					<li class="bullet">Acted as primary support of Verifications/QA department as well as several mission critical operations applications</li>
+					<li class="bullet">Worked in a team to develop new system for Quality Assurance department using Silverlight, C# and Entity Framework</li>
+					<li class="bullet">Developed enhancements to the Audio Recording Archiving system</li>
+				</ul>
+			</div>
+			<div class="col-sm-12">
+				<h4 class="strike-through">
+					<span>Infocision Management Corporation</span>
+					<span class="date">
+						2007-10-01 — 2009-10-01
+					</span>
+				</h4>
+				<div class="website pull-right">
+					<a href="http://www.infocision.com/">http://www.infocision.com/</a>
+				</div>
+				<div class="position">
+					Application Developer I
+				</div>
+				<div class="summary">
+					<p></p>
+				</div>
+				<h4>Highlights</h4>
+				<ul class="highlights">
+					<li class="bullet">Worked with Senior level developers to support operations systems in VB.NET, ASP.NET and SQL</li>
+					<li class="bullet">Helped design new applications and revisions to existing ones</li>
+					<li class="bullet">Worked with a team to support the Verifications/QA department’s software applications</li>
+					<li class="bullet">Developed new reporting solutions with SQL Reporting Services to compliment new systems</li>
 				</ul>
 			</div>
 			</div>
 		</div>
 	</section>
 
-	<section id="volunteer" class="row">
-		<aside class="col-sm-3">
-			<h3>Volunteer</h3>
-		</aside>
-		<div class="col-sm-9">
-			<div class="row">
-			<div class="col-sm-12">
-				<h4 class="strike-through">
-					<span>CoderDojo</span>
-					<span class="date">
-						2012-01-01 — 2013-01-01
-					</span>
-				</h4>
-				<div class="website pull-right">
-					<a href="http://coderdojo.com/">http://coderdojo.com/</a>
-				</div>
-				<div class="position">
-					Teacher
-				</div>
-				<div class="summary">
-					<p>Global movement of free coding clubs for young people.</p>
-				</div>
-				<h4>Highlights</h4>
-				<ul class="highlights">
-					<li class="bullet">Awarded &#x27;Teacher of the Month&#x27;</li>
-				</ul>
-			</div>
-			</div>
-		</div>
-	</section>
 	
 	<section id="education" class="row">
 		<aside class="col-sm-3">
@@ -342,22 +403,17 @@ h4 span:first-child {
 			<div class="row">
 			<div class="col-sm-12">
 				<h4 class="strike-through">
-					<span>University of Oklahoma</span>
+					<span>Youngstown State University</span>
 					<span class="date">
-						2011-06-01 — 2014-01-01
+						2002-08-01 — 2006-12-01
 					</span>
 				</h4>
 				<div class="area">
-					Information Technology
+					Computer Science
 				</div>
 				<div class="studyType">
 					Bachelor
 				</div>
-				<h4>Courses</h4>
-				<ul class="courses">
-					<li>DB1101 - Basic SQL</li>
-					<li>CS2011 - Java Introduction</li>
-				</ul>
 			</div>
 			</div>
 		</div>
@@ -371,51 +427,34 @@ h4 span:first-child {
 			<div class="row">
 			<div class="col-sm-12">
 				<h4 class="strike-through">
-					<span>Digital Compression Pioneer Award</span>
+					<span>Eagle Scout</span>
 				</h4>
 				<div class="date pull-right">
 					<em>Awarded</em>
-					2014-11-01
+					2002-01-01
 				</div>
 				<div class="awarder">
 					<em>by</em>
-					<strong>Techcrunch</strong>
+					<strong>Boy Scouts of America</strong>
 				</div>
-				<div class="summary">
-					There is no spoon.
+			</div>
+			<div class="col-sm-12">
+				<h4 class="strike-through">
+					<span>Employee of the Month</span>
+				</h4>
+				<div class="date pull-right">
+					<em>Awarded</em>
+					2011-06-01
+				</div>
+				<div class="awarder">
+					<em>by</em>
+					<strong>Infocision</strong>
 				</div>
 			</div>
 			</div>
 		</div>
 	</section>
 	
-	<section id="publications" class="row">
-		<aside class="col-sm-3">
-			<h3>Publications</h3>
-		</aside>
-		<div class="col-sm-9">
-			<div class="row">
-			<div class="col-sm-12">
-				<h4 class="strike-through">
-					<span>Video compression for 3d media</span>
-					<span class="date">
-						2014-10-01
-					</span>
-				</h4>
-				<div class="website pull-right">
-					<a href="http://en.wikipedia.org/wiki/Silicon_Valley_(TV_series)"></a>
-				</div>
-				<div class="publisher">
-					<em>Published by</em>
-					<strong>Hooli</strong>
-				</div>
-				<div class="summary">
-					<p>Innovative middle-out compression algorithm that changes the way we store data.</p>
-				</div>
-			</div>
-			</div>
-		</div>
-	</section>
 	
 	<section id="skills" class="row">
 		<aside class="col-sm-3">
@@ -429,41 +468,40 @@ h4 span:first-child {
 				</div>
 				<ul class="keywords">
 					<li>HTML</li>
-					<li>CSS</li>
+					<li>ASP.NET</li>
 					<li>Javascript</li>
+					<li>WCF</li>
+					<li>SOAP Web Services</li>
+					<li>jQuery</li>
+					<li>CSS</li>
+					<li>PHP</li>
+					<li>Silverlight</li>
+					<li>Ajax</li>
 				</ul>
 			</div>
 			<div class="col-sm-6">
 				<div class="name">
-					<h4>Compression</h4>
+					<h4>Software Development</h4>
 				</div>
 				<ul class="keywords">
-					<li>Mpeg</li>
-					<li>MP4</li>
-					<li>GIF</li>
+					<li>C#</li>
+					<li>VB.NET</li>
+					<li>Linq</li>
+					<li>Linq to SQL</li>
+					<li>Entity Framework</li>
+					<li>SQL Reporting Services</li>
+					<li>C++</li>
+					<li>MSMQ</li>
+					<li>SQL</li>
+					<li>TFS</li>
+					<li>SVN</li>
+					<li>Git</li>
 				</ul>
 			</div>
 			</div>
 		</div>
 	</section>
 
-	<section id="languages" class="row">
-		<aside class="col-sm-3">
-			<h3>Languages</h3>
-		</aside>
-		<div class="col-sm-9">
-			<div class="row">
-			<div class="col-sm-6">
-				<div class="language">
-					<strong>English</strong>
-				</div>
-				<div class="fluency">
-					Native speaker
-				</div>
-			</div>
-			</div>
-		</div>
-	</section>
 
 	<section id="interests" class="row">
 		<aside class="col-sm-3">
@@ -473,34 +511,17 @@ h4 span:first-child {
 			<div class="row">
 			<div class="col-sm-6">
 				<div class="name">
-					<h4>Wildlife</h4>
+					<h4>Photography</h4>
 				</div>
 				<ul class="keywords">
-					<li>Ferrets</li>
-					<li>Unicorns</li>
+					<li>Cameras</li>
+					<li>Art</li>
 				</ul>
 			</div>
 			</div>
 		</div>
 	</section>
 	
-	<section id="references" class="row">
-		<aside class="col-sm-3">
-			<h3>References</h3>
-		</aside>
-		<div class="col-sm-9">
-			<div class="row">
-			<div class="col-sm-12">
-				<blockquote class="reference">
-					<p>It is my pleasure to recommend Richard, his performance working as a consultant for Main St. Company proved that he will be a valuable addition to any company.</p>
-					<p class="name">
-						<strong>— Erlich Bachman</strong>
-					</p>
-				</blockquote>
-			</div>
-			</div>
-		</div>
-	</section>
 
 	</div>
 	
