updates to resume, changing to index.html

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ h4 span:first-child {
 			<div class="row">
 			<div class="col-sm-6">
 				<strong>Email</strong>
-				<div class="email"><a class="__cf_email__" href="/cdn-cgi/l/email-protection" data-cfemail="ee8a8f98878ac089878888819c8ac0849cae89838f8782c08d8183">[email&#160;protected]</a><script cf-hash='f9e31' type="text/javascript">
+				<div class="email"><a class="__cf_email__" href="/cdn-cgi/l/email-protection" data-cfemail="325653445b561c555b54545d40561c584072555f535b5e1c515d5f">[email&#160;protected]</a><script cf-hash='f9e31' type="text/javascript">
 /* <![CDATA[ */!function(){try{var t="currentScript"in document?document.currentScript:function(){for(var t=document.getElementsByTagName("script"),e=t.length;e--;)if(t[e].getAttribute("cf-hash"))return t[e]}();if(t&&t.previousSibling){var e,r,n,i,c=t.previousSibling,a=c.getAttribute("data-cfemail");if(a){for(e="",r=parseInt(a.substr(0,2),16),n=2;a.length-n;n+=2)i=parseInt(a.substr(n,2),16)^r,e+=String.fromCharCode(i);e=document.createTextNode(e),c.parentNode.replaceChild(e,c)}}}catch(u){}}();/* ]]> */</script></div>
 			</div>
 			<div class="col-sm-6">
@@ -266,6 +266,26 @@ h4 span:first-child {
 						</div>
 					</div>
 				</div>
+				<div class="col-sm-6">
+					<strong class="network">
+						Facebook
+					</strong>
+					<div class="username">
+						<div class="url">
+							<a href="https://www.facebook.com/David.Gifford.Jr">DavidGiffordJr</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-6">
+					<strong class="network">
+						Google+
+					</strong>
+					<div class="username">
+						<div class="url">
+							<a href="https://plus.google.com/+DavidGiffordJr">DavidGiffordJr</a>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -311,7 +331,7 @@ h4 span:first-child {
 					Senior Software Developer / Team Lead
 				</div>
 				<div class="summary">
-					<p>Design, develop, and maintain a full range of software applications from ASP.NET and PHP web apps to legacy Windows applications</p>
+					<p>Work with a team to design and develop a web and mobile application. Work with design team and coordinate with other developers as team lead.</p>
 				</div>
 				<h4>Highlights</h4>
 				<ul class="highlights">
@@ -334,7 +354,7 @@ h4 span:first-child {
 					Senior Application Developer
 				</div>
 				<div class="summary">
-					<p>Design, develop, and maintain a full range of software applications from ASP.NET and PHP web apps to legacy Windows applications</p>
+					<p>Work with business units to build and support the software they use for business operations. Work with the IT team as well as the business team to design and implement software that best fits the company.</p>
 				</div>
 				<h4>Highlights</h4>
 				<ul class="highlights">
@@ -357,7 +377,7 @@ h4 span:first-child {
 					Lead Application Developer
 				</div>
 				<div class="summary">
-					<p>Design, develop, and maintain a full range of software applications from ASP.NET and PHP web apps to legacy Windows applications</p>
+					<p>Lead support of a core company system. Lead a junior developer in supporting a business department and the software applications they use to operate.</p>
 				</div>
 				<h4>Highlights</h4>
 				<ul class="highlights">
@@ -380,7 +400,7 @@ h4 span:first-child {
 					Application Developer I
 				</div>
 				<div class="summary">
-					<p></p>
+					<p>Work with Senior developers to support and build infrastructure applications.</p>
 				</div>
 				<h4>Highlights</h4>
 				<ul class="highlights">
