more resume updates

--- a/index.html
+++ b/index.html
@@ -216,18 +216,12 @@ h4 span:first-child {
 			<div class="row">
 			<div class="col-sm-6">
 				<strong>Email</strong>
-				<div class="email"><a class="__cf_email__" href="/cdn-cgi/l/email-protection" data-cfemail="3e5a5f48575a1059575858514c5a10544c7e59535f5752105d5153">[email&#160;protected]</a><script cf-hash='f9e31' type="text/javascript">
+				<div class="email"><a class="__cf_email__" href="/cdn-cgi/l/email-protection" data-cfemail="c9ada8bfa0ade7aea0afafa6bbade7a3bb89aea4a8a0a5e7aaa6a4">[email&#160;protected]</a><script cf-hash='f9e31' type="text/javascript">
 /* <![CDATA[ */!function(){try{var t="currentScript"in document?document.currentScript:function(){for(var t=document.getElementsByTagName("script"),e=t.length;e--;)if(t[e].getAttribute("cf-hash"))return t[e]}();if(t&&t.previousSibling){var e,r,n,i,c=t.previousSibling,a=c.getAttribute("data-cfemail");if(a){for(e="",r=parseInt(a.substr(0,2),16),n=2;a.length-n;n+=2)i=parseInt(a.substr(n,2),16)^r,e+=String.fromCharCode(i);e=document.createTextNode(e),c.parentNode.replaceChild(e,c)}}}catch(u){}}();/* ]]> */</script></div>
 			</div>
 			<div class="col-sm-6">
 				<strong>Phone</strong>
 				<div class="phone">(330) 766-0833</div>
-			</div>
-			<div class="col-sm-6">
-				<strong>Website</strong>
-				<div class="website">
-					<a href="http://developmentchaos.com">http://developmentchaos.com</a>
-				</div>
 			</div>
 			</div>
 		</div>
@@ -237,7 +231,7 @@ h4 span:first-child {
 			<h3>About</h3>
 		</aside>
 		<div class="col-sm-9">
-			<p>Software engineer with a passion for leaning new ways to make products better.</p>
+			<p>Software engineer with a passion for leaning new ways to solve problems better.</p>
 		</div>
 	</section>
 	<section id="profiles" class="row">
